[ML] Massive Cleanup, MultiAPI, improve aliases